--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ rayon = "1.8"
 proj = "0.27"
 fgbfile = "0.6.0"
 geo = "0.30.0"
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
 indicatif = { version = "0.18.0", features = ["rayon"] }
