--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ geo = "0.30.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 indicatif = { version = "0.18.0", features = ["rayon"] }
+flate2 = "1.0"
