--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 indicatif = { version = "0.18.0", features = ["rayon"] }
 flate2 = "1.0"
+fitparser = "0.4"
