--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = "1.0"
 indicatif = { version = "0.18.0", features = ["rayon"] }
 flate2 = "1.0"
 fitparser = "0.4"
+geos = { version = "10.0.0", features = ["geo"] }
