--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "clsx": "^2.1.1",
+    "maplibre-gl": "^5.7.0",
+    "pmtiles": "^4.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
